# hydra

./: .gitignore  CMakeLists.txt  DIRECTORS_NOTES.md  Makefile  README.md  bigint.h  bootstrap.sh  build.sh  build_and_benchmark.sh  hydra.cpp  hydra.h  hydra.hpp  hydra_mac_aarch64.S  hydra_test.cpp  main.cpp  perf_snapshot.md  quick_bench.cpp  sample_run.md
bench/: attribution_pass.cpp  bench_hydra.cpp  bench_mont_backends.cpp  bench_pow_mod.cpp  compare.py  fused_ab_test.cpp  knuth_asm_probe.cpp  pow_mod_report.py  probe_fios_small_k.cpp  probe_mont_fios.cpp  probe_mont_loop.cpp  probe_mont_sos.cpp  probe_mont_variants.cpp  probe_mul_leaf.cpp  probe_pow_mod_ab.cpp  profile_knuth.cpp  profile_mul_dispatch.cpp  run.sh
scripts/: debug.entitlements  pgo_run.sh  profile_chain_large_add.sh  profile_large_add.sh  sign_hydra_test.sh
